# Flight_Computer

./: CMakeLists.txt  README.md
src/: main.cpp
src/Control/: Controller.cpp  Controller.h  PIDController.cpp  PIDController.h
src/FlightLoop/: FlightLoop.cpp  FlightLoop.h
src/Logging/: Logger.cpp  Logger.h
src/Scheduler/: Scheduler.cpp  Scheduler.h
src/Sensors/: GyroSensor.cpp  GyroSensor.h
src/Sensors/Dynamics/: RigidBody1D.cpp  RigidBody1D.h
